...
                                canAnswerNextQuestion = false;
                                setQuizEntryState();
                              });
                            }
                          }
                        : null,
                    child: const Text('Next'),
                  ),
                ),
              ],
            ),
          )
        ],
...
